[project]
name = "Reinforcement-Learning-Class"
version = "0.1.0"
description = "A minimal repo that creates the gridworld with Gymnasium"
authors = [
    {name = "ligy75", email = "ligy75@mail2.sysu.edu.cn"},
]
dependencies = ["gymnasium>=0.28"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
